fixed table overflow on browse pages

--- a/mod-picker/app/assets/stylesheets/pages/browse.scss
+++ b/mod-picker/app/assets/stylesheets/pages/browse.scss
@@ -30,7 +30,9 @@
   }
 }
 
-.left-column {
+.left-browse-column {
+  min-width: 250px;
+
   /* custom sliders */
   .rz-bubble {
     font-size: 12px !important;
@@ -67,7 +69,9 @@
 }
 
 /* css for search results */
-.right-column {
+.right-browse-column {
+  max-width: 970px;
+
   table {
     border-collapse: collapse;
     width: 100%;
